# agent-rust

./: .gitignore  Cargo.toml
src/: consumer.rs  helper.rs  main.rs  model.rs  producer.rs  worker.rs
