[package]
name = "agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["sync",  "rt-multi-thread", "time", "macros"] }
failure = { version = "0.1.8" }
bincode = { version = "1.3.3" }
serde = { version = "1.0.183",features = ["derive"] }